fixed gray and z-index

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -213,6 +213,7 @@ body
 	padding-top: 25px
 	position: relative
 	box-shadow: 8px 0px 15px -4px rgba(0,0,0,0.25)
+	z-index: 1
 	&.fixed
 		bottom: 0px
 		margin-left: 0
@@ -363,6 +364,9 @@ body
 	color: #fff
 	cursor: pointer
 	box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.4)
+	-webkit-user-select: none
+	-moz-user-select: none
+	-ms-user-select: none
 	transition: all .3s ease
 	z-index: 99
 .plus-button	
@@ -423,9 +427,11 @@ body
 
 /*-------- main -------*/
 
-.main-bg
+.main
+	min-height: 100vh
+	&-bg
 		position: relative
-		z-index: -1
+		z-index: 0
 		background-color: #f5f5f5
 .margin-main-bg
 	position: absolute
